# ChangeLog for app-text/stardict
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  28 Sep 2012; Martin Väth <martin@mvath.de>:
  Bump to EAPI=5

  12 May 2012; Martin Väth <martin@mvath.de>:
  base->eutils

  05 May 2012; Martin Väth <martin@mvath.de>:
  Update pkgconfig dependency change from main tree.

  15 Apr 2012; Martin Väth <martin@mvath.de>:
  Inherit base. Add zlib compatibility patch from main tree.

  24 Jan 2012; Martin Väth <martin@mvath.de>:
  Copy from tree to make dependencies for help optional. Clean old ChangeLog.