@@ -1,0 +1,2 @@
+DIST genius-1.0.16.tar.xz 2254836 SHA256 45ce3e0b02c109588ff9a4c74e7c3541b3de89ea93f20ab08178c51c6ab4fb78 SHA512 130528fb92acb7829444086b0614368ca781838e97da6691d63d16652f8f7cdff2a171200f17331667395122f939be8f82cc9b2595717249edaa622e40a7ba28 WHIRLPOOL 1ec1d2e714b4e08419f86ccedbbba89fc5b5f220238bf3ae4fd12ab9b64249716d7ca087700d4707f6c597b8d08ececf12fff013410934abd4470ee88f104c3b
+DIST genius-reference.pdf 1024944 SHA256 79011ae33ff781507185898ba76b156699061eda78ed16e15aa02195c896ee4b SHA512 04af3870104d2320b1d4b345d74d713a0dfcdf8a228002506508f437659b3ef6037ead0b1f6b37cc335692150750b58c4007fdaaddd9540233474ccd10dac285 WHIRLPOOL 301302145d43843ddd749ab33612438d360462c9d3daa12d7050d9ca6da82bdea3ef53b917989d0c518327780b147a9f74e407f555a62dcdbe0f0c2ef864fa88
