@@ -1,0 +1,6 @@
+# ChangeLog for sci-mathematics/genius
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: $
+
+  31 May 2013; Martin Väth <martin@mvath.de>:
+  Copy from tree to make gnome-doc-utils optional. Clean old ChangeLog.
